# chirpstack-api

./: .dockerignore  .gitignore  Dockerfile-csharp  Dockerfile-go  Dockerfile-js  Dockerfile-rust  Makefile  README.md  docker-compose.yml
.github/workflows/: main.yml
csharp/: Chirpstack.Api.csproj  Makefile
csharp/chirpstack/as/: As.cs  AsGrpc.cs
csharp/chirpstack/common/: Common.cs
csharp/chirpstack/geo/: Geo.cs  GeoGrpc.cs
csharp/chirpstack/gw/: Gw.cs
csharp/chirpstack/nc/: Nc.cs  NcGrpc.cs
csharp/chirpstack/ns/: Ns.cs  NsGrpc.cs  Profiles.cs
go/: Makefile  go.mod  go.sum
go/as/: as.pb.go
go/as/integration/: integration.pb.go
go/common/: common.pb.go
go/geo/: geo.pb.go
go/gw/: gw.pb.go
go/nc/: nc.pb.go
go/ns/: ns.pb.go  profiles.pb.go
java/: Makefile  README.md  pom.xml
js/: Makefile  README.md  package.json
js/as/: as_grpc_pb.d.ts  as_grpc_pb.js  as_pb.d.ts  as_pb.js
js/gw/: gw_pb.d.ts  gw_pb.js
js/ns/: ns_grpc_pb.d.ts  ns_grpc_pb.js  ns_pb.d.ts  ns_pb.js
protobuf/as/: as.proto
protobuf/common/: common.proto
protobuf/gw/: gw.proto
protobuf/ns/: ns.proto  profiles.proto
python/: Makefile
python/src/: README.md  setup.py
rust/: Cargo.toml  build.rs
rust/proto/chirpstack-api/as/: as.proto
rust/proto/chirpstack-api/as/integration/: integration.proto
rust/proto/chirpstack-api/common/: common.proto
rust/proto/chirpstack-api/geo/: geo.proto
rust/proto/chirpstack-api/gw/: gw.proto
rust/proto/chirpstack-api/nc/: nc.proto
rust/proto/chirpstack-api/ns/: ns.proto  profiles.proto
swagger/: Makefile  go.mod  go.sum
(+14 files in other folders)
