[package]
authors = ["Orne Brocaar <info@brocaar.com>"]
description = "ChirpStack Protobuf / gRPC API definitions."
edition = "2018"
homepage = "https://www.chirpstack.io"
license = "MIT"
name = "chirpstack_api"
repository = "https://github.com/brocaar/chirpstack-api"
version = "3.7.9"

[features]
default = ["grpc_support", "rustfmt"]
grpc_support = ["tonic/transport", "tonic-build/transport", "tokio"]
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
prost = "0.6"
prost-types = "0.6.1"

tokio = {version = "0.2", features = ["macros"], optional = true}
tonic = {version = "0.1", features = ["codegen"], default-features = false}

[build-dependencies]
tonic-build = {version = "0.1", default-features = false}
