[package]
authors = ["Orne Brocaar <info@brocaar.com>"]
description = "ChirpStack Protobuf / gRPC API definitions."
edition = "2018"
homepage = "https://www.chirpstack.io"
license = "MIT"
name = "chirpstack_api"
repository = "https://github.com/sagar-patel-sls/chirpstack-api"
version = "3.9.1"

[features]
default = ["grpc_support", "rustfmt"]
grpc_support = ["tonic/transport", "tonic-build/transport", "tokio"]
rustfmt = ["tonic-build/rustfmt"]

[dependencies]
prost = "0.7"
prost-types = "0.7"

tokio = {version = "1.5", features = ["macros"], optional = true}
tonic = {version = "0.4", features = ["codegen", "prost"], default-features = false}

[build-dependencies]
tonic-build = {version = "0.4", features = ["prost"], default-features = false}
